# endura-sdk

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt  setup.py
device/: Dockerfile  docker-compose.yml  main.py  requirements.txt
endura_sdk/: __init__.py  agent.py  core.py
endura_sdk/app/: agent.py  config.py  core.py
endura_sdk/tests/: test_agent.py
sdk/: __init__.py  agent.py  config.py  core.py
