[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endura-sdk"
version = "0.1.0"
description = "Trust layer SDK for Edge AI devices"
authors = [
    { name="Michael Kirschbaum", email="hi@michaelkirschbaum.com" }
]
dependencies = [
    "torch>=2.0",
    "psutil"
]
requires-python = ">=3.7"