[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endura-sdk"
version = "0.1.0"
description = "Trust layer SDK for Edge AI models"
authors = [
    { name="EnduraAI", email="hi@michaelkirschbaum.com" }
]
dependencies = [
    "torch>=2.0,<3.0",
    "psutil>=5.9.8,<6.0"
]
requires-python = ">=3.7"