[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endura-sdk"
version = "0.1.3"
description = "SDK for Edge AI Device Agent"
long_description = """
## **Usage**

### **Using the SDK in Python**:

Once the SDK is installed, you can import and use it in your Python code:

```python
from endura import EnduraAgent

# Initialize with your model path
agent = EnduraAgent("path_to_model.pth")

# Log an inference event
agent.log_inference(input_data, output_data)
```
"""
long_description_content_type = "text/markdown"
authors = [
    { name="Michael Kirschbaum", email="hi@michaelkirschbaum.com" }
]
dependencies = [
    "torch>=2.0",
    "psutil",
    "numpy"
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk"]